// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParentRecordInfo renders with parent record 1`] = `
<DocumentFragment>
  <div>
    <span>
      Part of 
    </span>
    <a
      href="/literature/1234"
    >
      A title of book
    </a>
  </div>
</DocumentFragment>
`;

exports[`ParentRecordInfo renders with subtitle and pages in parent record 1`] = `
<DocumentFragment>
  <div>
    <span>
      Part of 
    </span>
    <a
      href="/literature/1234"
    >
      A title of book
      <span>
         : A subtitle
      </span>
    </a>
    <span>
      , 1-10
    </span>
  </div>
</DocumentFragment>
`;
